crates/uitest/fixtures/semantic_borrowck/view_param_noncopy_projection_move.snap
---
source: crates/uitest/tests/semantic_borrowck.rs
assertion_line: 25
expression: diags
input_file: fixtures/semantic_borrowck/view_param_noncopy_projection_move.fe
---
error[16-0002]: move conflict in `fn unwrap`
   ┌─ view_param_noncopy_projection_move.fe:11:13
   │
11 │     let p = w.p
   │             ^^^ cannot move out of a view parameter
